--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,10 @@
-body {
-    background-color: bisque;
+
+.nav-item {
+    float: right;
+    margin-top: 2em;
+    padding-top: 1em;
+    padding-bottom: 1em;
+    text align-items: center;
 }
+
 
