--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,3 @@
-/*
-container 
-    row
-        columns
-*/
-
 .nav-item {
     float: right;
     margin-top: 2em;
@@ -19,5 +13,19 @@ container
     font-weight: 600;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
+
+.btn {
+    border-color: blue;
+    background-color: black;
+  }
+  
+  .btn:hover {
+    color: yellow;
+    border-color: black;
+    background-color: black;
+    box-shadow: 0px 0px 8px 4px blue;
+  }
+
+
 
 
